User account input box styles Added & Homepage Updated

--- a/FrontEnd/src/components/User/style.css
+++ b/FrontEnd/src/components/User/style.css
@@ -63,6 +63,69 @@
     color: #fff;
   }
   
+  .info_prof {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .info_input_box {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+  }
+
+  .info_input {
+    border-radius: 4px;
+    padding: 12px;
+    border: 2px solid gray;
+    color: gray;
+    font-weight: bold;
+  }
+
+  .info_box_left {
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
+  }
+
+  .info_box_right {
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
+  }
+
+  .info_button {
+    background-color: white;
+    border: 2px solid #00bc77;
+    border-radius: 4px;
+    padding: 8px 22px;
+    color: #00bc77;
+    font-size: medium;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  .button_left{
+    margin-left: auto;
+
+  }
+
+  .button_right{
+    margin-right: auto;
+
+  }
+
+
+  .info_welcome {
+    text-align: center;
+    font-size: xx-large;
+    margin-bottom: 32px;
+    color: white;
+    font-weight: bold;
+  }
+  
+  
   @media (min-width: 720px) {
     .account {
       flex-direction: row;
