--- a/FrontEnd/src/components/User/style.css
+++ b/FrontEnd/src/components/User/style.css
@@ -13,7 +13,13 @@
     text-align: left;
     margin-top: 2rem;
   }
-  
+  ::placeholder{
+    color: black;
+  }
+  .input-container{
+    padding-right: 90px;
+    padding-bottom: 5px;
+  }
   .account-amount {
     margin: 0;
     font-size: 2.5rem;
@@ -72,15 +78,17 @@
   .info_input_box {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     gap: 12px;
   }
 
   .info_input {
     border-radius: 4px;
     padding: 12px;
-    border: 2px solid gray;
-    color: gray;
+    border: 2px solid black;
+    color: black;
     font-weight: bold;
+    margin-left: 10px;
   }
 
   .info_box_left {
@@ -125,6 +133,11 @@
     font-weight: bold;
   }
   
+  .btn-position{
+    display: flex;
+    gap: 10px;
+    padding-top: 10px;
+  }
   
   @media (min-width: 720px) {
     .account {
