--- a/FrontEnd/src/components/Sign_In/style.css
+++ b/FrontEnd/src/components/Sign_In/style.css
@@ -47,3 +47,8 @@
     padding: 5px;
     font-size: 1.2rem;
   }
+  .error-message {
+    color: #ff0000; 
+    font-size: 14px;
+    margin-top: 8px;
+  }
