--- a/FrontEnd/src/components/Hero/style.css
+++ b/FrontEnd/src/components/Hero/style.css
@@ -1,6 +1,6 @@
 
 .hero {
-    background-image: url('../../assets/images/bank-tree.jpeg');
+    background-image: url('../../assets/images/bank-tree.webp');
     background-position: 0 -50px;
     background-size: cover;
     background-repeat: no-repeat;
